# DS-ventures-Assignment

./: README.md
ros2_mock_ws/install/: local_setup.sh  setup.sh
ros2_mock_ws/install/mock_serial_robot/include/mock_serial_robot/: mock_system.hpp
ros2_mock_ws/install/mock_serial_robot/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: mock_serial_robot
ros2_mock_ws/install/mock_serial_robot/share/ament_index/resource_index/package_run_dependencies/: mock_serial_robot
ros2_mock_ws/install/mock_serial_robot/share/mock_serial_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_mock_ws/install/mock_serial_robot/share/mock_serial_robot/cmake/: mock_serial_robotConfig.cmake
ros2_mock_ws/install/mock_serial_robot/share/mock_serial_robot/config/: controllers.yaml
ros2_mock_ws/log/: latest_build
ros2_mock_ws/src/mock_serial_robot/: CMakeLists.txt  mock_system_plugin.xml  package.xml
ros2_mock_ws/src/mock_serial_robot/include/mock_serial_robot/: mock_driver.hpp
ros2_mock_ws/src/mock_serial_robot/launch/: mock_robot.launch.py
ros2_mock_ws/src/mock_serial_robot/src/: mock_system.cpp
ros2_mock_ws/src/mock_serial_robot/urdf/: mock_robot.urdf.xacro
